fix(reader): fix choosing reader by path method